service sending message to activity

--- a/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
+++ b/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
 
         <service
-            android:name=".BeaconsService"
+            android:name=".UserPositionService"
             android:enabled="true"
             android:exported="true"></service>
     </application>
