--- a/IndoorPositioningSystem/app/build.gradle
+++ b/IndoorPositioningSystem/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile project(':android-beacon-library-2.9')
+    compile 'com.android.support:cardview-v7:24.2.0'
 }
