--- a/IndoorPositioningSystem/app/build.gradle
+++ b/IndoorPositioningSystem/app/build.gradle
@@ -21,8 +21,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
     compile project(':android-beacon-library-2.9')
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
