Adding venue to firebase functionality

--- a/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
+++ b/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
@@ -33,7 +33,12 @@
         <activity android:name=".SettingsActivity" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".AddVenueActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
