--- a/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
+++ b/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="android.app.searchable"
+            android:resource="@xml/searchable"></meta-data>
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +29,11 @@
         </activity>
 
         <service
-            android:name=".UserPositionService"
+            android:name=".PositioningService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".CalibrationService"
             android:enabled="true"
             android:exported="true" />
 
@@ -34,8 +41,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".AddVenueActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <activity android:name=".AddVenueActivity"
+            android:label="Add venue"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
