--- a/IndoorPositioningSystem/app/build.gradle
+++ b/IndoorPositioningSystem/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
