--- a/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
+++ b/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="android.app.searchable"
-            android:resource="@xml/searchable"></meta-data>
-        <activity android:name=".MainActivity">
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
 
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,11 +42,19 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".AddVenueActivity"
-            android:label="Add venue"></activity>
+        <activity
+            android:name=".AddVenueActivity"
+            android:label="Add venue" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".VenueActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label ="Venue"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
